--- a/app/views/beobachtungen/_show_beschreibung.html.erb
+++ b/app/views/beobachtungen/_show_beschreibung.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default" id="mapedit" >
+<div class="panel panel-default">
     <div class="panel-heading">
       <h2 class="panel-title">Beschreibung</h2>
     </div>
