--- a/app/views/beobachtungen/index.html.erb
+++ b/app/views/beobachtungen/index.html.erb
@@ -4,6 +4,12 @@
 
 <h1>Beobachtungen</h1>
 
+<p>
+  Angezeigt werden zunächst die neuen Beobachtungen, das heißt alle, die noch keinem Transportabschnitt zugewiesen wurden.
+  Diese können dann einzeln angeschaut und Transportabschnitten zugewiesen werden.
+</p>
+
+
 <div class="row">
   <div class="col-sm-3">
   
