--- a/app/views/beobachtungen/_eingabehilfe.html.erb
+++ b/app/views/beobachtungen/_eingabehilfe.html.erb
@@ -1,12 +1,11 @@
     <div class="col-sm-6">
-      <div class="panel panel-default" id="mapedit" >
+      <div class="panel panel-default">
         <div class="panel-heading">
           <h1 class="panel-title">Eingabehilfe: Beobachtung</h1>
-          <%= render "beobachtungen/show_eckdaten", beobachtung: beobachtung %>
-          <%= render "beobachtungen/show_beschreibung", beobachtung: beobachtung %>
         </div>
         <div class="panel-body">
-        
+          <%= render "beobachtungen/show_eckdaten", beobachtung: beobachtung %>
+          <%= render "beobachtungen/show_beschreibung", beobachtung: beobachtung %>
         </div>
       </div>
     </div>
