--- a/app/views/beobachtungen/show.html.erb
+++ b/app/views/beobachtungen/show.html.erb
@@ -12,10 +12,13 @@
 
 <%= hidden_field_tag "beobachtung_id", @beobachtung.id %>
 
+<!--Eckdaten Panel, zeigt Ort und Zeit der Beobachtung -->
 <%= render "show_eckdaten", beobachtung: @beobachtung %>
 
+<!--Zeigt Beschreibung des Transports und die Gefahrgut-Kennzeichnung -->
 <%= render "show_beschreibung", beobachtung: @beobachtung %>
 
+<!-- Zeigt den zugeordneten Transportabschnitt oder ermoeglicht eine Zuordnung -->
 <%= render "show_transportabschnitt", beobachtung: @beobachtung %>
 
 
