--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,9 @@
-<h1>Einstellungen</h1>
-
+<% if current_user?(@user) %>
+  <h1>Einstellungen</h1>
+<% else %>
+  <h1>Benutzereinstellungen für <%= @user.name %></h1>
+<% end %>
+  
 <%= form_for(@user) do |f| %>
   <%= render 'shared/error_messages' %>
 
