Korrektur Javascript Beobachtungen

--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -136,7 +136,10 @@
         </div>
         
        
-        
+      <script type="text/javascript">
+        verkehrsmittel_wahl()
+      </script>
+      
       </div>
         
         <div class="beobachtung_zug">
