--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,9 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten-Eingabe <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to "Transportdaten aus csv-Dateien einlesen", upload_index_path %></li>
+            <% if is_editor? %>
+              <li><%= link_to "Transportdaten aus csv-Dateien einlesen", upload_index_path %></li>
+            <% end %>
             <li><%= link_to "Beobachtung eingeben", new_beobachtung_path %></li>
           </ul>
         </li>
