Anlagen-Übersicht mit Suche

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,3 +24,11 @@
   color: white;
   margin-top: -20px;
 }
+
+.thumbnail .thumbnail-div {
+  width: 100%;
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
