--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
 
   <div class="jumbotron jumbotron-image">
     <div class="container">
-      <h1>Atomtransport gesichtet?</h1>
+      <h1>Atomtransport gesehen?</h1>
       <p>Hilf mit, die geheimen Transporte aufzudecken und öffentlich zu machen.</p>
       <%= link_to "Beobachtung melden!", new_beobachtung_path, class: "btn btn-primary btn-lg" %>
     </div>
@@ -26,11 +26,12 @@
   
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-5">
         <h2>Transporte vor deiner Haustür?</h2>
+        <input type="text" class="form-control">
       </div>
-      <div class="col-sm-6">
-        <h2>Kürzliche Transporte</h2>
+      <div class="col-sm-5 col-sm-offset-2">
+        <h2>Aktuelle Transporte</h2>
       </div>
     </div>
   </div>
