--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,15 +14,17 @@
     <div class="collapse navbar-collapse" id="hauptnavigation">
 
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten-Eingabe <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <% if is_editor? %>
+        <% if is_editor? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten-Eingabe <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Transportdaten aus csv-Dateien einlesen", upload_index_path %></li>
-            <% end %>
-            <li><%= link_to "Beobachtung eingeben", new_beobachtung_path %></li>
-          </ul>
-        </li>
+              <li><%= link_to "Beobachtung eingeben", new_beobachtung_path %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Beobachtung melden", new_beobachtung_path %></li>
+        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten-Bearbeitung <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
