--- a/app/views/anlagen/index.html.erb
+++ b/app/views/anlagen/index.html.erb
@@ -6,40 +6,61 @@
 
 <h1>Atomanlagen</h1>
 
-<%= form_tag anlagen_path, method: 'get' do %>
-  <div class="form-group">
-    <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Suchen" %>
-  </div>
-<% end %>
+<div class="row">
 
-<% unless @anlagen %>
-
-  <p>Keine Anlagen gefunden.</p>
-  
-<% else %>
-
-  <div class="row">
-    <% @anlagen.each do |anlage| %>
-      <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-          <%= link_to anlage do %>
-            <div class="thumbnail-div"
-              <% if anlage.bild_url? %>
-                style="background-image: url(<%= anlage.bild_url %>)"
-              <% else %>
-                style="background-image: url(http://upload.wikimedia.org/wikipedia/commons/1/16/Nuclear_power_plant_2D.svg)"
-              <% end %>
-            ></div>
+  <div class="col-sm-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Anlagen-Kategorie</h3>
+      </div>
+      <ul class="list-group">
+        <%= link_to "Alle", anlagen_path , class: "list-group-item" %>
+        <% @kategorien.each do |kategorie, kategorie_id| %>
+          <% if params[:kategorie].to_i == kategorie_id %>
+            <%= link_to kategorie, anlagen_path(:kategorie => kategorie_id), class: "list-group-item active" %>
+          <% else %>
+            <%= link_to kategorie, anlagen_path(:kategorie => kategorie_id), class: "list-group-item" %>
           <% end %>
-          <div class="caption">
-            <h4><%= link_to anlage.name, anlage %></h4>
-          </div>
-        </div>
+        <% end %>
+      </ul>
+    </div>
+  
+  </div>
+
+  <div class="col-sm-9">
+
+    <%= form_tag anlagen_path, method: 'get' do %>
+      <div class="form-group">
+        <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Suchen" %>
       </div>
     <% end %>
-  </div>
-  
-  <%= will_paginate %>
-  
-<% end %>
 
+    <% unless @anlagen %>
+      <p>Keine Anlagen gefunden.</p>
+    <% else %>
+      <div class="row">
+        <% @anlagen.each do |anlage| %>
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <%= link_to anlage do %>
+                <div class="thumbnail-div"
+                  <% if anlage.bild_url? %>
+                    style="background-image: url(<%= anlage.bild_url %>)"
+                  <% else %>
+                    style="background-image: url(http://upload.wikimedia.org/wikipedia/commons/1/16/Nuclear_power_plant_2D.svg)"
+                  <% end %>
+                ></div>
+              <% end %>
+              <div class="caption">
+                <h4><%= link_to anlage.name, anlage %></h4>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+      <%= will_paginate %>      
+    <% end %>
+  
+  </div>
+
+</div>
