--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -44,7 +44,12 @@
         <% else %>
         
           <li><%= link_to "Beobachtung melden", new_beobachtung_path %></li>
-          <li><%= link_to "Atomanlagen", anlagen_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "Atomanlagen", anlagen_path %></li>
+            </ul>
+          </li>
           
         <% end %>
       </ul>
