Kleinere Anlagen-Übersicht-Korrekturen

--- a/app/views/anlagen/index.html.erb
+++ b/app/views/anlagen/index.html.erb
@@ -9,6 +9,7 @@
 <div class="row">
 
   <div class="col-sm-3">
+    <h4>Filtern nach</h4>
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">Anlagen-Kategorie</h3>
@@ -52,7 +53,7 @@
                 ></div>
               <% end %>
               <div class="caption">
-                <h4><%= link_to anlage.name, anlage %></h4>
+                <%= link_to anlage.name, anlage %>
               </div>
             </div>
           </div>
