--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,10 +24,11 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten-Bearbeitung <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Atomanlagen", anlagen_path %></li>
               <li><%= link_to "Radioaktive Stoffe", stoffe_path %></li>
+              <li><%= link_to "Schiffe", schiffe_path %></li>
               <li><%= link_to "Transportfirmen", firmen_path %></li>
               <li><%= link_to "Transporte", transporte_path %></li>
               <li><%= link_to "Beobachtungen", beobachtungen_path %></li>
