--- a/app/views/schiffe/_form.html.erb
+++ b/app/views/schiffe/_form.html.erb
@@ -6,7 +6,11 @@
   </div>
   <div class="form-group">
     <%= f.label :imo, "IMO-Nummer" %><br>
-    <%= f.text_area :imo, class: "form-control" %>
+    <%= f.text_field :imo, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :vesselfinder_url, "Vesselfinder-URL" %><br>
+    <%= f.text_field :vesselfinder_url, class: "form-control" %>
   </div>
   
   <div class="actions">
