--- a/app/views/schiffe/index.html.erb
+++ b/app/views/schiffe/index.html.erb
@@ -4,6 +4,11 @@
 
 <h1>Schiffe</h1>
 
+<div id="map" class="panel" style="height:400px;"></div>
+<script type="text/javascript">
+  allSchiffMap()
+</script>
+
 <% unless @schiffe %>
   <p>Keine Schiffe gefunden.</p>
 <% else %>
