--- a/app/views/schiffe/show.html.erb
+++ b/app/views/schiffe/show.html.erb
@@ -14,7 +14,8 @@
 
 <% if @schiff.current_lat && @schiff.current_lon %>
   <div id="map" style="height:400px;"></div>
-    <%= map(:center => { :latlng => [@schiff.current_lat, @schiff.current_lon], :zoom => 5 },
-            :markers => [{:latlng => [@schiff.current_lat, @schiff.current_lon]}]) %>
+    <script type="text/javascript">
+        schiffMap(<%= @schiff.current_lat %>, <%= @schiff.current_lon %>, 0)
+      </script>
   </div>
 <% end %>
