--- a/app/views/schiffe/show.html.erb
+++ b/app/views/schiffe/show.html.erb
@@ -5,25 +5,32 @@
   </div>
 <% end %>
 
-<h1><%= @schiff.name %></h1>
+<h1><%= @schiff.name %> <small>IMO <%= @schiff.imo %></small></h1>
 
 <div class="row">
 
   <div class="col-sm-6">
-    <p>
-      <strong>IMO:</strong>
-      <%= @schiff.imo %>
-    </p>
-
-    <p>
-      <strong>Nächstes Mal in Hamburg:</strong>
-      <ul>
-        <% @schiff.next_ports.each do |date| %>
-          <li><%= date %></li>
-        <% end %>
-      </ul>
-    </p>
+      
+    <% unless @schiff.next_ports.empty? %>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Fahrplan</h3>
+        </div>
+        <table class="table">
+          <tbody>
+            <% @schiff.next_ports.sort_by {|k,v| k}.each do |date,port| %>
+              <tr>
+                <td><%= date.strftime("%d.%m.%Y") %></td>
+                <td><%= port %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    <% end %>
+    
   </div>
+ 
 
   <div class="col-sm-6">
     <% if @schiff.current_lat && @schiff.current_lon %>
