--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,7 +20,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten-Eingabe <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Transportdaten aus csv-Dateien einlesen", upload_index_path %></li>
-              <li><%= link_to "MACS-Fahrplan einlesen (Beta)", read_macs_path %></li>
+              <li><%= link_to "Fahrplandaten einlesen", read_schedules_path %></li>
               <li><%= link_to "Beobachtung eingeben", new_beobachtung_path %></li>
             </ul>
           </li>
