--- a/app/views/firmen/_form.html.erb
+++ b/app/views/firmen/_form.html.erb
@@ -11,27 +11,21 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :adresse %><br>
-    <%= f.text_field :adresse %>
+  <div class="form-group">
+    <%= f.label :beschreibung, "Beschreibung" %>
+    <%= f.text_area :beschreibung, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :plz %><br>
-    <%= f.text_field :plz %>
-  </div>
-  <div class="field">
-    <%= f.label :ort %><br>
-    <%= f.text_field :ort %>
-  </div>
-  <div class="field">
-    <%= f.label :beschreibung %><br>
-    <%= f.text_area :beschreibung %>
+  <div class="form-group">
+    <label>Tätigkeiten</label>
+    <div class="checkbox">
+      <label><%= f.check_box :reederei %> Reederei</label>
+    </div>
   </div>
   <div class="actions">
-    <%= f.submit "Firma erstellen" %>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
