--- a/app/views/firmen/index.html.erb
+++ b/app/views/firmen/index.html.erb
@@ -1,18 +1,18 @@
-<div class="btn-group header-buttons">
-  <%= link_to 'Neue Transportfirma', new_firma_path, class: "btn btn-success" %>
-</div>
-
-<h1>Transportfirmen</h1>
+<h1>
+  Transportfirmen
+  <% if is_editor? %>
+    <div class="btn-group header-buttons">
+      <%= link_to 'Neue Transportfirma', new_firma_path, class: "btn btn-success" %>
+    </div>
+  <% end %>
+</h1>
 
 <table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
-      <th>Adresse</th>
-      <th>Plz</th>
-      <th>Ort</th>
       <th>Beschreibung</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -20,13 +20,12 @@
     <% @firmen.each do |firma| %>
       <tr>
         <td><%= link_to firma.name, firma %></td>
-        <td><%= firma.adresse %></td>
-        <td><%= firma.plz %></td>
-        <td><%= firma.ort %></td>
         <td><%= firma.beschreibung %></td>
-        <td><%= link_to 'Show', firma %></td>
-        <td><%= link_to 'Bearbeiten', edit_firma_path(firma) %></td>
-        <td><%= link_to 'Löschen', firma, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <% if firma.reederei %>
+            <span class="badge">Reederei</span>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
