--- a/app/views/schiffe/_form.html.erb
+++ b/app/views/schiffe/_form.html.erb
@@ -8,6 +8,10 @@
         <%= f.text_field :name, class: "form-control" %>
       </div>
       <div class="form-group">
+        <%= f.label :firma, "Reederei"%>
+        <%= collection_select(:schiff, :firma_id, @reedereien, :id, :name, {}, class: "form-control") %>
+      </div>
+      <div class="form-group">
         <%= f.label :imo, "IMO-Nummer" %><br>
         <%= f.text_field :imo, class: "form-control" %>
       </div>
